Trans_Lab2/language-3ac.output
Grammar

    0 $accept: start $end

    1 start: program

    2 program: stmt_list
    3        | /* empty */

    4 stmt_list: stmt
    5          | stmt_list stmt

    6 stmt: label ':'
    7     | IFFALSE factor go_to
    8     | IFTRUE factor go_to
    9     | go_to
   10     | assign
   11     | INPUT factor
   12     | OUTPUT factor
   13     | OUTPUT literal

   14 assign: TMP_VAR ASSIGN expr
   15       | NAME ASSIGN expr
   16       | struct_item ASSIGN expr
   17       | array_item ASSIGN expr

   18 expr: factor
   19     | factor CMP factor
   20     | factor '+' factor
   21     | factor '-' factor
   22     | factor '*' factor
   23     | factor '/' factor
   24     | factor OR factor
   25     | factor AND factor
   26     | factor XOR factor
   27     | '-' factor
   28     | NOT factor
   29     | array_item
   30     | struct_item

   31 factor: TMP_VAR
   32       | NAME
   33       | INT_CONST
   34       | FLOAT_CONST

   35 label: LABEL
   36      | NAME

   37 go_to: GOTO label

   38 array_item: factor '[' factor ']'

   39 struct_item: NAME '.' NAME

   40 literal: LITERAL


Terminals, with rules where they appear

$end (0) 0
'*' (42) 22
'+' (43) 20
'-' (45) 21 27
'.' (46) 39
'/' (47) 23
':' (58) 6
'[' (91) 38
']' (93) 38
error (256)
TMP_VAR (258) 14 31
LABEL (259) 35
NAME (260) 15 32 36 39
INT_CONST (261) 33
FLOAT_CONST (262) 34
LITERAL (263) 40
IFFALSE (264) 7
IFTRUE (265) 8
ASSIGN (266) 14 15 16 17
OR (267) 24
AND (268) 25
XOR (269) 26
NOT (270) 28
INPUT (271) 11
OUTPUT (272) 12 13
GOTO (273) 37
CMP (274) 19
_NOT (275)
_UMIN (276)


Nonterminals, with rules where they appear

$accept (30)
    on left: 0
start (31)
    on left: 1, on right: 0
program (32)
    on left: 2 3, on right: 1
stmt_list (33)
    on left: 4 5, on right: 2 5
stmt (34)
    on left: 6 7 8 9 10 11 12 13, on right: 4 5
assign (35)
    on left: 14 15 16 17, on right: 10
expr (36)
    on left: 18 19 20 21 22 23 24 25 26 27 28 29 30, on right: 14 15
    16 17
factor (37)
    on left: 31 32 33 34, on right: 7 8 11 12 18 19 20 21 22 23 24
    25 26 27 28 38
label (38)
    on left: 35 36, on right: 6 37
go_to (39)
    on left: 37, on right: 7 8 9
array_item (40)
    on left: 38, on right: 17 29
struct_item (41)
    on left: 39, on right: 16 30
literal (42)
    on left: 40, on right: 13


state 0

    0 $accept: . start $end

    TMP_VAR      shift, and go to state 1
    LABEL        shift, and go to state 2
    NAME         shift, and go to state 3
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5
    IFFALSE      shift, and go to state 6
    IFTRUE       shift, and go to state 7
    INPUT        shift, and go to state 8
    OUTPUT       shift, and go to state 9
    GOTO         shift, and go to state 10

    $default  reduce using rule 3 (program)

    start        go to state 11
    program      go to state 12
    stmt_list    go to state 13
    stmt         go to state 14
    assign       go to state 15
    factor       go to state 16
    label        go to state 17
    go_to        go to state 18
    array_item   go to state 19
    struct_item  go to state 20


state 1

   14 assign: TMP_VAR . ASSIGN expr
   31 factor: TMP_VAR .

    ASSIGN  shift, and go to state 21

    $default  reduce using rule 31 (factor)


state 2

   35 label: LABEL .

    $default  reduce using rule 35 (label)


state 3

   15 assign: NAME . ASSIGN expr
   32 factor: NAME .
   36 label: NAME .
   39 struct_item: NAME . '.' NAME

    ASSIGN  shift, and go to state 22
    '.'     shift, and go to state 23

    ':'       reduce using rule 36 (label)
    $default  reduce using rule 32 (factor)


state 4

   33 factor: INT_CONST .

    $default  reduce using rule 33 (factor)


state 5

   34 factor: FLOAT_CONST .

    $default  reduce using rule 34 (factor)


state 6

    7 stmt: IFFALSE . factor go_to

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 25
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5

    factor  go to state 26


state 7

    8 stmt: IFTRUE . factor go_to

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 25
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5

    factor  go to state 27


state 8

   11 stmt: INPUT . factor

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 25
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5

    factor  go to state 28


state 9

   12 stmt: OUTPUT . factor
   13     | OUTPUT . literal

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 25
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5
    LITERAL      shift, and go to state 29

    factor   go to state 30
    literal  go to state 31


state 10

   37 go_to: GOTO . label

    LABEL  shift, and go to state 2
    NAME   shift, and go to state 32

    label  go to state 33


state 11

    0 $accept: start . $end

    $end  shift, and go to state 34


state 12

    1 start: program .

    $default  reduce using rule 1 (start)


state 13

    2 program: stmt_list .
    5 stmt_list: stmt_list . stmt

    TMP_VAR      shift, and go to state 1
    LABEL        shift, and go to state 2
    NAME         shift, and go to state 3
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5
    IFFALSE      shift, and go to state 6
    IFTRUE       shift, and go to state 7
    INPUT        shift, and go to state 8
    OUTPUT       shift, and go to state 9
    GOTO         shift, and go to state 10

    $default  reduce using rule 2 (program)

    stmt         go to state 35
    assign       go to state 15
    factor       go to state 16
    label        go to state 17
    go_to        go to state 18
    array_item   go to state 19
    struct_item  go to state 20


state 14

    4 stmt_list: stmt .

    $default  reduce using rule 4 (stmt_list)


state 15

   10 stmt: assign .

    $default  reduce using rule 10 (stmt)


state 16

   38 array_item: factor . '[' factor ']'

    '['  shift, and go to state 36


state 17

    6 stmt: label . ':'

    ':'  shift, and go to state 37


state 18

    9 stmt: go_to .

    $default  reduce using rule 9 (stmt)


state 19

   17 assign: array_item . ASSIGN expr

    ASSIGN  shift, and go to state 38


state 20

   16 assign: struct_item . ASSIGN expr

    ASSIGN  shift, and go to state 39


state 21

   14 assign: TMP_VAR ASSIGN . expr

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 40
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5
    NOT          shift, and go to state 41
    '-'          shift, and go to state 42

    expr         go to state 43
    factor       go to state 44
    array_item   go to state 45
    struct_item  go to state 46


state 22

   15 assign: NAME ASSIGN . expr

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 40
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5
    NOT          shift, and go to state 41
    '-'          shift, and go to state 42

    expr         go to state 47
    factor       go to state 44
    array_item   go to state 45
    struct_item  go to state 46


state 23

   39 struct_item: NAME '.' . NAME

    NAME  shift, and go to state 48


state 24

   31 factor: TMP_VAR .

    $default  reduce using rule 31 (factor)


state 25

   32 factor: NAME .

    $default  reduce using rule 32 (factor)


state 26

    7 stmt: IFFALSE factor . go_to

    GOTO  shift, and go to state 10

    go_to  go to state 49


state 27

    8 stmt: IFTRUE factor . go_to

    GOTO  shift, and go to state 10

    go_to  go to state 50


state 28

   11 stmt: INPUT factor .

    $default  reduce using rule 11 (stmt)


state 29

   40 literal: LITERAL .

    $default  reduce using rule 40 (literal)


state 30

   12 stmt: OUTPUT factor .

    $default  reduce using rule 12 (stmt)


state 31

   13 stmt: OUTPUT literal .

    $default  reduce using rule 13 (stmt)


state 32

   36 label: NAME .

    $default  reduce using rule 36 (label)


state 33

   37 go_to: GOTO label .

    $default  reduce using rule 37 (go_to)


state 34

    0 $accept: start $end .

    $default  accept


state 35

    5 stmt_list: stmt_list stmt .

    $default  reduce using rule 5 (stmt_list)


state 36

   38 array_item: factor '[' . factor ']'

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 25
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5

    factor  go to state 51


state 37

    6 stmt: label ':' .

    $default  reduce using rule 6 (stmt)


state 38

   17 assign: array_item ASSIGN . expr

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 40
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5
    NOT          shift, and go to state 41
    '-'          shift, and go to state 42

    expr         go to state 52
    factor       go to state 44
    array_item   go to state 45
    struct_item  go to state 46


state 39

   16 assign: struct_item ASSIGN . expr

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 40
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5
    NOT          shift, and go to state 41
    '-'          shift, and go to state 42

    expr         go to state 53
    factor       go to state 44
    array_item   go to state 45
    struct_item  go to state 46


state 40

   32 factor: NAME .
   39 struct_item: NAME . '.' NAME

    '.'  shift, and go to state 23

    $default  reduce using rule 32 (factor)


state 41

   28 expr: NOT . factor

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 25
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5

    factor  go to state 54


state 42

   27 expr: '-' . factor

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 25
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5

    factor  go to state 55


state 43

   14 assign: TMP_VAR ASSIGN expr .

    $default  reduce using rule 14 (assign)


state 44

   18 expr: factor .
   19     | factor . CMP factor
   20     | factor . '+' factor
   21     | factor . '-' factor
   22     | factor . '*' factor
   23     | factor . '/' factor
   24     | factor . OR factor
   25     | factor . AND factor
   26     | factor . XOR factor
   38 array_item: factor . '[' factor ']'

    OR   shift, and go to state 56
    AND  shift, and go to state 57
    XOR  shift, and go to state 58
    CMP  shift, and go to state 59
    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '*'  shift, and go to state 62
    '/'  shift, and go to state 63
    '['  shift, and go to state 36

    $default  reduce using rule 18 (expr)


state 45

   29 expr: array_item .

    $default  reduce using rule 29 (expr)


state 46

   30 expr: struct_item .

    $default  reduce using rule 30 (expr)


state 47

   15 assign: NAME ASSIGN expr .

    $default  reduce using rule 15 (assign)


state 48

   39 struct_item: NAME '.' NAME .

    $default  reduce using rule 39 (struct_item)


state 49

    7 stmt: IFFALSE factor go_to .

    $default  reduce using rule 7 (stmt)


state 50

    8 stmt: IFTRUE factor go_to .

    $default  reduce using rule 8 (stmt)


state 51

   38 array_item: factor '[' factor . ']'

    ']'  shift, and go to state 64


state 52

   17 assign: array_item ASSIGN expr .

    $default  reduce using rule 17 (assign)


state 53

   16 assign: struct_item ASSIGN expr .

    $default  reduce using rule 16 (assign)


state 54

   28 expr: NOT factor .

    $default  reduce using rule 28 (expr)


state 55

   27 expr: '-' factor .

    $default  reduce using rule 27 (expr)


state 56

   24 expr: factor OR . factor

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 25
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5

    factor  go to state 65


state 57

   25 expr: factor AND . factor

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 25
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5

    factor  go to state 66


state 58

   26 expr: factor XOR . factor

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 25
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5

    factor  go to state 67


state 59

   19 expr: factor CMP . factor

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 25
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5

    factor  go to state 68


state 60

   20 expr: factor '+' . factor

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 25
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5

    factor  go to state 69


state 61

   21 expr: factor '-' . factor

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 25
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5

    factor  go to state 70


state 62

   22 expr: factor '*' . factor

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 25
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5

    factor  go to state 71


state 63

   23 expr: factor '/' . factor

    TMP_VAR      shift, and go to state 24
    NAME         shift, and go to state 25
    INT_CONST    shift, and go to state 4
    FLOAT_CONST  shift, and go to state 5

    factor  go to state 72


state 64

   38 array_item: factor '[' factor ']' .

    $default  reduce using rule 38 (array_item)


state 65

   24 expr: factor OR factor .

    $default  reduce using rule 24 (expr)


state 66

   25 expr: factor AND factor .

    $default  reduce using rule 25 (expr)


state 67

   26 expr: factor XOR factor .

    $default  reduce using rule 26 (expr)


state 68

   19 expr: factor CMP factor .

    $default  reduce using rule 19 (expr)


state 69

   20 expr: factor '+' factor .

    $default  reduce using rule 20 (expr)


state 70

   21 expr: factor '-' factor .

    $default  reduce using rule 21 (expr)


state 71

   22 expr: factor '*' factor .

    $default  reduce using rule 22 (expr)


state 72

   23 expr: factor '/' factor .

    $default  reduce using rule 23 (expr)
